# git-commit-tracker

./: .gitignore  pyproject.toml  readme.md
src/git_commit_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/impact_analyzer/: __init__.py  cli.py  engine.py  git_utils.py  languages.py  parser.py
